<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/black"
    tools:context=".Cardio">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:backgroundTint="@color/black"
        android:orientation="vertical"
        android:textAlignment="center"
        tools:layout_editor_absoluteX="2dp"
        tools:layout_editor_absoluteY="1dp">

        <Button
            android:id="@+id/back_button"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:text="@string/backButtonLabel"
            android:backgroundTint="@color/black"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20sp"
            android:layout_marginBottom="20sp"/>

        <ImageView
            android:id="@+id/cardioCategoryView"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="20sp"
            app:srcCompat="@drawable/cardio_3"
            android:contentDescription="@string/cardioCategory" />

        <TextView
            android:id="@+id/cardioOverview"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/cardioOverview" />

        <TextView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="25sp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="20dp"
            android:entries="@array/cardioOptions" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>